	PR target/31701 	* config/sh/sh.c (output_stack_adjust): Avoid using the frame 	register itself to hold the offset constant.  Tell flow the use 	of r4 and r5 when they are used.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@124248 138bc75d-0d04-0410-961f-82ee72b054a4